--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :gender %><br>
-    <%= f.number_field :gender %>
+    <%= f.select :gender, Person.genders.keys.to_a  %>
   </div>
   <div class="actions">
     <%= f.submit %>
