--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :height %><br>
-    <%= f.number_field :height %>
+    <%= f.text_field :height %>
   </div>
   <div class="field">
     <%= f.label :weight %><br>
-    <%= f.number_field :weight %>
+    <%= f.text_field :weight %>
   </div>
   <div class="field">
     <%= f.label :gender %><br>
